# esp32-s3-box-basic

./: .gitignore  CLAUDE.md  KEYWORDS.md  TEST_PROGRAMS.txt  TODO.md  audio.cpp  audio.h  ble_keyboard.h  build.bat  dsk_image.h  esp32-s3-box-basic.code-workspace  esp32-s3-box-basic.ino  file_io.h  web_files.cpp  web_files.h
TI_Speech/: CMakeLists.txt  README.md  extract.py  library.properties  speech_rom.h  tms5220.cpp  tms5220.h  tms5220_coeffs.h
